# TI_301_PRJ_Markov_grp3

./: CMakeLists.txt  Makefile  README.md  README_part3.md  TI 301 PRJ Markov README.md  adjlist.c  adjlist.h  exemple1.txt  graph_mermaid.mmd  hasse.c  hasse.h  hasse.txt  hasse_mermaid.md  hasse_mermaid.mmd  input_generated.txt  main.c  main_global.c  main_markov.c  main_part2.c  main_part3.c  markov  markov.c  markov.h  matrix.c  matrix.h  tarjan.c  tarjan.h  utils.c  utils.h
data/: exemple1.txt
include/: graph.h  hasse.h  matrix.h  tarjan.h
src/: graph.c  hasse.c  main_markov.c  matrix.c  tarjan.c  utils.c
